scripts/deployment/templates/k8s/01-namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
---
apiVersion: v1
kind: Namespace
metadata:
  name: pet-clinic
