scripts/deployment/templates/k8s/06z-test-workload-identities.yml
apiVersion: v1
kind: Pod
metadata:
  name: quick-start
  namespace: "todo-api"
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: "todo-api-service-account"
