scripts/deployment/templates/k8s/10-test-workload-identities.yml
apiVersion: v1
kind: Pod
metadata:
  name: quick-start
  namespace: "todo"
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: "todo-app-service-account"
