scripts/deployment/templates/k8s/07a-todo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi
  namespace: todo
  labels:
    deploy: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: "todo-app-service-account"
      containers:
      - image: "$CONTAINER_IMAGE"
        imagePullPolicy: Always
        name: todoapp
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.3"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: /mnt/secrets-store
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi: 
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-secrets-todo-app
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443
